tests/correct/trickyAssignments2.py
(x,y) = [u,v] = [1*(2+3), 4-5]
a = [x,u,] = [y,v]
print (a, [u,x])
print v, [y,(u,v)]
