tests/error/test-bad-assign2.py
(x, (y+z, q)) = (1, (3,4))
